--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.9.0/css/lightbox.css" />
     <link rel="stylesheet" href="style.css">
+    <meta name="google-site-verification" content="C7_sGHC_eSj-D1KFxMoxIJ0cMeSWTzQd5GHG6YIzH3A" />
 	<meta name="description" content="CCA's mission is to cull students like you into IT professionals by imparting expert academic knowledge blended with practical training provided in the environment of the best of infrastructure and facilities."/>
-	
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-	  ga('create', 'UA-105575686-1', 'auto');
-	  ga('send', 'pageview');
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  </script>
-	
+    ga('create', 'UA-105700613-1', 'auto');
+    ga('send', 'pageview');
+</script>
+
 </head>
 
 <body>
     <div class="wrapper" id="home">
         <header id="header">
-            <img src="/images/logo_cca.png" alt="CCA - Chittor College of Airport & Hotel Management " class="img-logo"> 
+            <img src="/images/logo_cca.png" alt="CCA - Chittor College of Airport & Hotel Management " class="img-logo">
             <a href="/" id="logo">CCA</a>
             <ul id="menu">
                 <li><a href="#home"><span>Home</span></a></li>
@@ -245,7 +245,7 @@
                             <address>
                                 <strong>Chittor College of Airport & </strong><br>
                                 <strong>Hotel Management</strong>
-                                <br> #2-1490, Officer Lane, 
+                                <br> #2-1490, Officer Lane,
                                 <br> Chittoor, Andhra Pradesh, India
                                 <br>
                                 <abbr title="Phone">
@@ -271,6 +271,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="scripts.js"></script>
 </body>
-	
+
 
 </html>
